# SuperScaler

./: .gitmodules  CMakeLists.txt  README.md
src/: Anime4K.cpp  CustomResolution.cpp  Waifu2x-Extension-QT.pro  checkupdate.cpp  files.cpp  gif.cpp  icon.qrc  main.cpp  main.cpp.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressBar.cpp  settings.cpp  srmd_ncnn_vulkan.cpp  table.cpp  textBrowser.cpp  video.cpp  waifu2x.cpp  waifu2x_converter.cpp  waifu2x_ncnn_vulkan.cpp
